--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "php": "^7.2.5",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
-        "mockery/mockery": "dev-master",
-        "phpunit/phpunit": "4.8.*"
+        "mockery/mockery": "^1.4.2",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
